--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,12 @@
+// Importing partial files to be processed to css
 @import "config";
 @import "menu";
+@import "mobile";
 
+// Basic css reset
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -15,18 +20,6 @@ body {
   line-height: 1.5;
 }
 
-.color-theme {
-  background: red;
-  width: 40px;
-  height: 80px;
-
-  input {
-    width: 20px;
-    height: 20px;
-    // visibility: hidden;
-  }
-}
-
 // Headings
 h1,
 h2,
@@ -35,15 +28,15 @@ h3 {
   font-weight: 400;
 
   &.lg-heading {
-    font-size: 6rem;
-    margin-left: 0.5rem;
-    margin-bottom: -0.5rem;
+    font-size: 5.5rem;
+    margin-left: 1.5rem;
+    // margin-bottom: -0.5rem;
   }
 
   &.sm-heading {
     display: inline-block;
     margin-bottom: 1rem;
-    padding: 0.2rem 16rem 0.2rem 2.5rem;
+    padding: 0.2rem 2.5rem 0.2rem 2.5rem;
     background: rgba(lighten($secondary-color, 2), 0.2);
   }
 }
