--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
-// Exporting variables and mixins as a partial config file to
+// Exporting variables, functions, and mixins as a partial config file to
 // the main file to be processed into css
 
-$primary-color: #444;
-$secondary-color: rgb(243, 178, 39);
+$primary-color: rgb(87, 87, 87);
+$secondary-color: rgb(84, 141, 155);
 $show-home-image: true;
 $home-image: url(/dist/img/background.jpg) no-repeat center center fixed;
 $background-opacity: 0.6;
@@ -34,6 +34,16 @@ $background-opacity: 0.6;
         z-index: -1;
       }
     }
+  }
+}
+
+// Text color
+
+@function text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
   }
 }
 
