--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -49,6 +49,17 @@
       height: 150px;
     }
   }
+
+  .about-info {
+    grid-template-areas:
+      "bio-img"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+
+    grid-template-columns: 1fr;
+  }
 }
 
 // Phone
