--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,6 +61,12 @@ main {
   min-height: calc(100vh - 60px);
   height: 100%;
 
+  &.home-page {
+    h1 {
+      margin-top: 20vh;
+    }
+  }
+
   .icons {
     margin: 3rem 0 0 2.5rem;
 
@@ -75,7 +81,7 @@ main {
   }
 
   h1 {
-    margin-top: 20vh;
+    margin-top: 5vh;
   }
 }
 
@@ -123,6 +129,50 @@ main {
   background: lighten($primary-color, 5);
   padding: 0.5rem;
   border-bottom: $secondary-color 5px solid;
+}
+
+// Work Projects
+
+.projects {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 1.5rem;
+
+  img {
+    height: 15rem;
+    width: 100%;
+    border: 3px white solid;
+
+    &:hover {
+      opacity: 0.6;
+      border: 3px $secondary-color solid;
+    }
+  }
+}
+
+// Project Button Style
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+
+  &:hover {
+    background: rgba($secondary-color, 0.8);
+    color: text-color($secondary-color);
+  }
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 8);
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 8);
 }
 
 footer {
